test/Transforms/apply_op_specialization_forward_declared_adjoint.qke
// ========================================================================== //
// Copyright (c) 2026 NVIDIA Corporation & Affiliates.                        //
// All rights reserved.                                                       //
//                                                                            //
// This source code and the accompanying materials are made available under   //
// the terms of the Apache License 2.0 which accompanies this distribution.   //
// ========================================================================== //

// RUN: not cudaq-opt %s --apply-op-specialization 2>&1 | FileCheck %s

module {
  func.func private @prep(!quake.ref)

  func.func @kernel() {
    %q = quake.alloca !quake.ref
    quake.apply<adj> @prep %q : (!quake.ref) -> ()
    return
  }
}

// CHECK: error: 'func.func' op cannot create adjoint variant for forward-declared kernel 'prep' (kernel body is unavailable in this translation unit)
